 - Fixed defect #1861 Hebrew title breaks due to site HTML changes
 - Fixed defect #1862 forceIndexOverwrite does not update the indexes
 - Fixed defect #1863 appendLibraryToLogFile stopped working
 - Enhancement  #1864 Jukebox properties detects changes the XML config files
 - Enhancement  #1865 Add Watched/Unwatched category
 - Fixed defect #1872 Unable to rename log file at end of run

MovieJukebox 2.3
----------------
 - Fixed defect  #808 Trailers: Periodic rescan option
 - Enhancement   #997 Ability to turn off 'EXTRAS' processing
 - Enhancement  #1012 Separate index.htm XSL file
 - Enhancement  #1131 Smarter location of set artwork
 - Fixed defect #1267 Titles from IMDB may include their (year/roman numeral) format
 - Fixed defect #1416 Trailer doesn't download
 - Fixed defect #1499 Allocine plugin should use new XML API
 - Fixed defect #1629 Rating problem with Allocine plugin
 - Fixed defect #1604 Set poster is not picked up correctly for series with ":" in the name
 - Fixed defect #1634 SratimPlugin - download subtitles does not work due to website redesign
 - Enhancement  #1634 Removed properties sratim.username, sratim.password, sratim.code as they are no longer required for subtitles download. 
 - Fixed defect #1655 ComingSoon plugin not run properly
 - Enhancement  #1671 Add New:TV and New:Movies categories
 - Enhancement  #1687 Only load the required poster scanner plugins
 - Enhancement  #1689 Scan folder name instead of file name
 - Fixed defect #1700 Local fanart in root directory not being used
 - Fixed defect #1702 ComingSoon plot and outline have TRAMA LUNGA & TRAMA BREVA in them
 - Fixed defect #1705 Apple Trailers URL is wrong, trailers don't download
 - Enhancement  #1706 Adding a property to toggle logical\visual Hebrew for new 200 series firmwares 
 - Fixed defect #1707 SET XML not correct (Looks like a movie XML)
 - Enhancement  #1710 Ability to use tvdbid field in NFO files
 - Enhancement  #1713 Better output for method file size