@@ -38,6 +38,7 @@ MovieJukebox 2.4
  - Fixed defect #1863 appendLibraryToLogFile stopped working
  - Enhancement  #1864 Jukebox properties detects changes the XML config files
  - Enhancement  #1865 Add Watched/Unwatched category
+ - Fixed defect #1866 Plug in allocine doesn't retrieve Posters
  - Fixed defect #1872 Unable to rename log file at end of run
 
 MovieJukebox 2.3
